force-app/main/default/objects/Booking_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Unit (Free)</fullName>
            </value>
            <value>
                <fullName>Add-On (Free)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>